2017-02-20      Oskar Skog      <https://oskog97.com/#contact>
    0.5.0
        *: Updated the year on a few copyright statements.

2017-01-02      Oskar Skog      <https://oskog97.com/#contact>
    0.4.17
        * anonymine.py (curses_game (print_cell)): Don't restrict the
            attention mode on numbers surrounded by too many flags. If
            at most one flag must be left before finding misplaced flags,
            2000 mines would be nearly impossible to sweep.
        * NEWS: (See above change in anonymine.py)
        * anonymine.py (line 3): s/2016/2016-2017/

2017-01-01      Oskar Skog      <https://oskog97.com/#contact>
    0.4.16
        * LICENSE, anonymine.py: It's 2017 now.
        * NEWS: Practically at 0.5 already, only regression fixes may be added.

2016-12-31      Oskar Skog      <https://oskog97.com/#contact>
    0.4.15
        * ChangeLog: Hide mail address.
        * anonymine.py (curses_game): Created new method `print_cell` to
            reduce code duplication and introduce the attention mode to
            numbers with too many flags around them.

2016-12-28      Oskar Skog      <https://oskog97.com/#contact>
    0.4.14
        * anonymine.py (curses_game (print_char)), cursescfg:  Allow non ASCII
            textics on Python3.
        * anonymine.py (input): Don't redraw the window every time there has
            been a non flagging and non revealing mouse events.
        * README: New account play@anonymine-demo.oskog97.com:2222
        * cursescfg:
            - The `pair` index of the tuples has since long been removed.
            - Advice users to scroll at the edges when using the mouse.
            - BUTTON1 and BUTTON3 comment
            - Unicode support comments.
            - Extra wide characters are not supported

2016-12-25      Oskar Skog      <https://oskog97.com/#contact>
    0.4.13
        * anonymine_fields.py (generic_field.reveal): Use a loop instead of